Completed initial game play

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <link href="styles/style.css" rel="stylesheet">
     </head>
     <body>
-        <header></header>
+        <header>TBD | Trijam #169</header>
         <main>
-
+            <table id="game-table"></table>
         </main>
         <footer>
             A game by Ashley
