Added styling for monsters

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="styles/style.css" rel="stylesheet">
     </head>
     <body>
-        <header>Overgrowth | Trijam #169</header>
+        <header><a href="https://github.com/townsean/trijam-169">Overgrowth | Trijam #169</a></header>
         <main>
             <section class="game-stats">
                 <label id="elasped-time-label"></label>
@@ -40,7 +40,7 @@
             </section>
         </main>
         <footer>
-            A game by Ashley
+            <a href="https://twitter.com/thecodingcouple">A game by Ashley | @thecodingcouple</a>
         </footer>
         <script src="scripts/moment.js"></script>
         <script type="module" src="scripts/main.js"></script>
